--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="continue_using_facebook">Continue with Facebook</string>
     <string name="continue_using_google">Continue using Google</string>
+    <string name="find_jobs_and_freelancing_opportunities">Find Jobs and Freelancing Opportunities</string>
 </resources>
